--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+.navLinks {
+  display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 19%;
+    
+    padding-left: 70%;
+    text-decoration: none;
+}
+
